--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -48,7 +48,8 @@ with $\lambda_i$ being the neutron wavelength, $d$ the spacing of the crystal la
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.35\textwidth]{figures/bragg.pdf}
-	\caption{Bragg scattering on crystal planes having a spacing $d$. An incoming parallel neutron beam is reflected at an angle $2 \cdot \theta_M$ on both the upper and lower crystal plane, leading to a path difference of $2d \sin\theta$ between the beams. If the path difference is an integer multiple of the neutron wavelength, $\lambda_i$, the beams interfere constructively. Figure drawn after \cite[p. 68, Fig. 2.7]{Gross2012}. }
+	\caption[Bragg scattering.]{
+		Bragg scattering on crystal planes having a spacing $d$. An incoming parallel neutron beam is reflected at an angle $2 \cdot \theta_M$ on both the upper and lower crystal plane, leading to a path difference of $2d \sin\theta$ between the beams. If the path difference is an integer multiple of the neutron wavelength, $\lambda_i$, the beams interfere constructively. Figure drawn after \cite[p. 68, Fig. 2.7]{Gross2012}. }
 	\label{fig:braggscattering}
 \end{figure}
 
@@ -62,7 +63,8 @@ where the two wavevectors $\underline{k}_i$ and $\underline{k}_f$ point along th
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.35\textwidth]{figures/diffraction.pdf}
-	\caption{Principle of diffraction. A polychromatic neutron beam coming from the reactor core is Bragg-scattered from the monochromator (M), picking out a single wavelength $\lambda_i$ and corresponding wavevector $\underline{k}_i$. The monochromatic beam is next scattered on the sample (S) at an angle $2\theta_S$, defining the direction of a wavevector $\underline{k}_f$. The momentum transferred from the neutron to the sample is given by Eq. \ref{eq:Q} as the difference of the two wavevectors.}
+	\caption[Neutron diffraction.]{
+		Principle of neutron diffraction. A polychromatic neutron beam coming from the reactor core is Bragg-scattered from the monochromator (M), picking out a single wavelength $\lambda_i$ and corresponding wavevector $\underline{k}_i$. The monochromatic beam is next scattered on the sample (S) at an angle $2\theta_S$, defining the direction of a wavevector $\underline{k}_f$. The momentum transferred from the neutron to the sample is given by Eq. \ref{eq:Q} as the difference of the two wavevectors.}
 	\label{fig:diffraction}
 \end{figure}
 
@@ -86,14 +88,16 @@ As the name implies, the difference of the TAS set-up compared to the two-axis d
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.4\textwidth]{figures/spectroscopy.pdf}
-	\caption{Principle of spectroscopy. A polychromatic neutron beam coming from the reactor core is Bragg-scattered from the monochromator crystal (M), picking out a single wavelength $\lambda_i$ and wavevector $\underline{k}_i$. The monochromatic beam is next scattered on the sample (S) at an angle $2\theta_S$, defining a wavevector $\underline{k}_f$. The magnitude of $\underline{k}_f$ and thus $\lambda_f$ is determined by Bragg-scattering on the analyser crystal (A). The momentum and energy transfers are given by Eqs. \ref{eq:Q} and \ref{eq:E}, respectively. }
+	\caption[Neutron spectroscopy.]{
+		Principle of neutron spectroscopy. A polychromatic neutron beam coming from the reactor core is Bragg-scattered from the monochromator crystal (M), picking out a single wavelength $\lambda_i$ and wavevector $\underline{k}_i$. The monochromatic beam is next scattered on the sample (S) at an angle $2\theta_S$, defining a wavevector $\underline{k}_f$. The magnitude of $\underline{k}_f$ and thus $\lambda_f$ is determined by Bragg-scattering on the analyser crystal (A). The momentum and energy transfers are given by Eqs. \ref{eq:Q} and \ref{eq:E}, respectively. }
 	\label{fig:spectroscopy}
 \end{figure}
 
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.75\textwidth]{figures/thales.jpg}
-	\caption{The triple-axis spectrometer ThALES \cite{thales} at the Institut Laue-Langevin in Grenoble, France. The neutron path from the reactor to the detector is marked as white arrows. The momentum transfer, $\hbar \underline{Q}$, is also shown. This picture is reproduced from the supplementary information of Ref. \cite{skxpaper}.}
+	\caption[The Thales instrument at the ILL.]{
+		The triple-axis spectrometer ThALES \cite{thales} at the Institut Laue-Langevin in Grenoble, France. The neutron path from the reactor to the detector is marked as white arrows. The momentum transfer, $\hbar \underline{Q}$, is also shown. This picture is reproduced from the supplementary information of Ref. \cite{skxpaper}.}
 	\label{fig:thales}
 \end{figure}
 
