--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -725,6 +725,18 @@
 
 @misc
 {
+	web_matplotlib,
+	title = {{Matplotlib (Software)}},
+	author = {{The Matplotlib development team}},
+	year = {2002-2021},
+	url = "https://matplotlib.org/",
+	OPThowpublished = "\url{https://matplotlib.org/}",
+	note = "[Online; accessed 2-August-2021]",
+}
+
+
+@misc
+{
 	web_NOMAD,
 	title = {{NOMAD Instrument Control System (Software)}},
 	author = {{ILL Instrument Control Group}},
@@ -792,6 +804,18 @@
 	url = "https://www.opengl.org//",
 	OPThowpublished = "\url{https://www.opengl.org//}",
 	note = "[Online; accessed 31-July-2021]",
+}
+
+
+@misc
+{
+	web_swig,
+	title = {{SWIG -- Simplified Wrapper and Interface Generator (Software)}},
+	author = {{The SWIG Developers}},
+	year = {1995-2021},
+	url = "http://www.swig.org/",
+	OPThowpublished = "\url{http://www.swig.org/}",
+	note = "[Online; accessed 2-August-2021]",
 }
 
 % -----------------------------------------------------------------------------
