--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -78,11 +78,12 @@ The situation is depicted in Fig. \ref{fig:tas_axes}.
 			\includegraphics[width = 0.95 \textwidth]{figures/axes}
 		\end{center}
 	\end{minipage}
-	\caption{Left panel: Local transformations for an axis. The symbols $R_{\mathrm{x}}^i$ are shorthands
+	\caption[Instrument axis coordinate systems.]{
+	Left panel: Local transformations for an axis. The symbols $R_{\mathrm{x}}^i$ are shorthands
 	for the rotation matrices $R\left( \theta_{\mathrm{x}}^i \right)$, with $x = \left\{ \mathrm{in,\, int,\, out} \right\}$.
 	$P^i$ is the point of origin for the axis.
-	Right panel: Three coupled axes build up the triple-axis spectrometer, with axes 1, 2, and 3 naming the monochromator,
-	the sample, and the analyser axis, respectively.
+	Right panel: Three coupled axes build up the triple-axis spectrometer, with axes 1, 2, and 3 
+	naming the monochromator, the sample, and the analyser axis, respectively.
 	\label{fig:tas_axes}}
 \end{figure}
 
@@ -278,7 +279,8 @@ involving the previous and the next vertex, respectively, are below a given smal
 	\includegraphics[width = 0.49 \textwidth, trim=0.25cm 0 0 0, clip]{figures/simplification_step1}
 	\hspace{0.1cm}
 	\includegraphics[width = 0.49 \textwidth, trim=0.25cm 0 0 0, clip]{figures/simplification_step2}
-	\caption{Typical example of a contour line segment generation and simplification.
+	\caption[Contour line segment generation.]{
+		Typical example of a contour line segment generation and simplification.
 		Panel (a): A contour line (green) separating two regions (blue and red) that has been found using the tracing algorithm (section \ref{sec:contourtracing}).
 		Panel (b): Vertices (while circles) are generated for each pixel and connected by line segments (black lines).
 		Panel (c): Staircase artefacts are removed from the line segment collection.
@@ -356,7 +358,8 @@ software, not a library, and is not under an open-source license.
 			\includegraphics[width = 0.95 \textwidth]{figures/linesegs2}
 		\end{center}
 	\end{minipage}
-	\caption{Top panel: Voronoi regions for two line segments, $l_1$ and $l_2$.
+	\caption[Voronoi diagrams for line segments.]{
+		Top panel: Voronoi regions for two line segments, $l_1$ and $l_2$.
 		Bottom panel: Voronoi regions for five line segments, $l_1,\, l_2,\, ...,\, l_5$.
 		The line segments and their endpoints are marked in blue. The small red points represent the Voronoi vertices.
 		The black lines are the bisectors of the Voronoi regions, where the solid lines delimit finite and the dashed lines
@@ -445,7 +448,8 @@ of the library and can be found in the file \lstinline|./src/libs/voronoi_lines.
 			\includegraphics[width = 1 \textwidth]{figures/linesegs_skeleton}
 		\end{center}
 	\end{minipage}
-	\caption{Panel (a): Ungrouped line segments and their Voronoi bisectors.
+	\caption[Voronoi diagrams for polygonal regions.]{
+		Panel (a): Ungrouped line segments and their Voronoi bisectors.
 		Panel (b): The same line segments, but with each polygonal region grouped.
 		The Voronoi diagram is only calculated between groups, not within the same group.
 		Panel (c): A mixture of the first two cases, where not entire regions are grouped
@@ -497,7 +501,7 @@ as the operator projecting $\left| p - x \right>$ onto $\left|d\right>$, see \ci
 	\begin{center}
 		\includegraphics[width = 0.25 \textwidth]{figures/dropped_perpendicular}
 	\end{center}
-	\caption{Projection of point $p$ onto line $l$.
+	\caption[Projection of a point onto a line.]{Projection of point $p$ onto line $l$.
 		\label{fig:dropped_perpendicular}}
 \end{figure}
 
@@ -525,15 +529,18 @@ using the standard C++ functions \lstinline[language=C++]|std::make_heap()| and
 \lstinline[language=C++]|std::pop_heap()|, respectively.
 
 
-\begin{figure}
+\begin{figure}[htb]
 	\begin{center}
 		\includegraphics[width = 0.66 \textwidth]{figures/linesegs_path}
 	\end{center}
-	\caption{The final path (orange) between the start and target positions (large red and green points, respectively).
+	\caption[Path between a start and a target position.]{
+		The final path (orange) between the start and target positions (large red and green points, respectively).
 		As before, the line segment vertices are depicted as blue points, the line segments as blue lines.
 		The thin black lines represent the bisectors of the Voronoi diagram, the red points are the Voronoi vertices.
 		\label{fig:linesegs_path}}
 \end{figure}
 
 
+\section{Summary}
+TODO
 % -----------------------------------------------------------------------------
