--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -26,7 +26,8 @@ The respective relations between the basis vectors and their angles can be direc
 \begin{figure}
 	\centering
 	\includegraphics[width = 0.2 \textwidth]{figures/cell}
-	\caption{The unit cell of a crystal is given by its coordinate vectors $a$, $b$, and $c$ 
+	\caption[Crystal unit cell.]{
+		The unit cell of a crystal is given by its coordinate vectors $a$, $b$, and $c$ 
 		as well as their angles $\alpha$, $\beta$, and $\gamma$.}
 	\label{fig:cell}
 \end{figure}
@@ -160,7 +161,8 @@ For that, we have a look at the incoming and final neutron wavevectors $\left| k
 	\begin{center}
 		\includegraphics[width = 0.75 \textwidth]{figures/tas_triangle}
 	\end{center}
-	\caption{Triple-axis layout (left) and scattering triangle (right). \label{fig:scattering_triangle}}
+	\caption[TAS layout and scattering triangle.]{
+		Triple-axis layout (left) and scattering triangle (right). \label{fig:scattering_triangle}}
 \end{figure}
 
 We can calculate $2 \theta_S$ by forming the scalar product of $\left| Q \right>$ with itself.
