--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -69,7 +69,7 @@
 \input{tex/xtal.tex}
 \input{tex/paths.tex}
 \input{tex/implementation.tex}
-\input{tex/gui.tex}
+\input{tex/interfaces.tex}
 
 % Nomad interface
 % Verweis auf Nomad 3D und vTAS/vEXP
