--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -90,6 +90,7 @@
 % TODO: add chapter letters
 \listoffigures{}
 %\listoftables{}
+\cleardoublepage
 \addcontentsline{toc}{chapter}{List of Listings}
 \listof{listing}{List of Listings}
 %\lstlistoflistings{}
