--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -494,6 +494,18 @@
 
 @misc
 {
+	wiki_visitor,
+	author = "{Wikipedia contributors}",
+	title = {{Visitor pattern --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Visitor_pattern&oldid=1035596562",
+	OPThowpublished = "\url{https://en.wikipedia.org/w/index.php?title=Visitor_pattern&oldid=1035596562}",
+	note = "[Online; accessed 3-August-2021]"
+}
+
+
+@misc
+{
 	web_aabb,
 	author = {{Mozilla Developer Network Web Docs}},
 	title = {{3D collision detection}},
@@ -636,6 +648,18 @@
 	url = "https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/index.htm",
 	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/polygon/doc/index.htm}",
 	note = "[Online; accessed 5-July-2021]",
+}
+
+
+@misc
+{
+	web_boost_proptree,
+	title = {{Boost.PropertyTree, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
+	author = {Marcin Kalicinski and Sebastian Redl},
+	year = {2008-2013},
+	url = "https://www.boost.org/doc/libs/1_76_0/doc/html/property_tree.html",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/property_tree.html}",
+	note = "[Online; accessed 3-August-2021]",
 }
 
 
